feat: add core logic + Redis Cache
