# cmd/server/main.go
@@ -11,9 +11,12 @@ import (
 	"net/http"
 
 	_ "github.com/EhsanSepehriNasab/polling-platform/docs"
+	"github.com/EhsanSepehriNasab/polling-platform/internal/cache"
 	"github.com/EhsanSepehriNasab/polling-platform/internal/config"
 	"github.com/EhsanSepehriNasab/polling-platform/internal/db"
 	"github.com/EhsanSepehriNasab/polling-platform/internal/polls"
+	"github.com/EhsanSepehriNasab/polling-platform/internal/users"
+
 	"github.com/go-chi/chi/v5"
 	httpSwagger "github.com/swaggo/http-swagger"
 )
@@ -26,6 +29,9 @@ func main() {
 	}
 
 	db.RunMigrations(cfg.DatabaseURL)
+
+	// Initialize Redis
+	cache.InitRedis() // Ensure Redis is initialized before starting the server
 
 	r := chi.NewRouter()
 
@@ -42,7 +48,20 @@ func main() {
 	pollService := polls.NewPollService(pollRepo)
 	pollHandler := polls.NewPollHandler(pollService)
 
+	// Initialize User Repository, Service, and Handler
+	userRepo := users.NewUserRepository(db.DB)
+	userService := users.NewUserService(userRepo)
+	userHandler := users.NewUserHandler(userService)
+
+	// Poll endpoints
 	r.Post("/polls", pollHandler.CreatePoll)
+	r.Post("/polls/{pollID}/vote", pollHandler.VotePollHandler)
+	r.Post("/polls/{pollID}/skip", pollHandler.SkipPollHandler)
+	r.Get("/polls", pollHandler.PollFeedHandler)
+	r.Get("/polls/{pollID}/stats", pollHandler.GetPollResultsHandler)
+
+	// User endpoints
+	r.Post("/users/register", userHandler.RegisterUser)
 
 	log.Println("Server starting on port", cfg.Port)
 	err := http.ListenAndServe(fmt.Sprintf(":%s", cfg.Port), r)
